[package]
name = "cargo-testdox"
version = "0.3.0"
authors = ["John Arundel <john@bitfieldconsulting.com>"]
edition = "2021"
description = """
A Cargo subcommand to print your test names as sentences.
"""
keywords = ["test", "testdox", "unit-tests"]
categories = [
    "command-line-utilities",
    "development-tools",
    "development-tools::cargo-plugins",
    "development-tools::testing",
]
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/cargo-testdox"
homepage = "https://github.com/bitfield/cargo-testdox"
repository = "https://github.com/bitfield/cargo-testdox"
exclude = ["/.github/"]

[badges]
github = { repository = "bitfield/cargo-testdox", workflow = "CI" }
maintenance = { status = "actively-developed" }

[dependencies]
anyhow = "1.0.86"
colored = "2.1.0"
